<resources>
    <string name="app_name">actividad_4</string>

    <string name="tvTitulo">Gestión de Usuario</string>
    <string name="etDocumento">Ingrese el Documento</string>
    <string name="etUsuario">Ingrese el Usuario</string>
    <string name="etNombres">Ingrese los Nombres</string>
    <string name="etApellidos">Ingrese el Apellidos</string>
    <string name="etContraseña">Ingrese la Contraseña</string>

    <string name="btnGuardar">Guardar</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnListar">Listar</string>
    <string name="btnBorrar">Borrar</string>

</resources>