<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Titulo -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitulo"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>


    <EditText
        android:id="@+id/etDocumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ingrese documento"
        android:inputType="number"
        android:layout_marginBottom="8dp"

        android:minHeight="48dp"
        />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="Ingrese el Usuario"
        android:minHeight="48dp"
         />

    <EditText
        android:id="@+id/etNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etNombres"
        android:layout_marginBottom="8dp"

        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="Ingrese el Apellidos"
        android:minHeight="48dp"
         />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="ingrese la contraseña"

        android:inputType="numberPassword"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"/>

    <!-- Botones en tabla -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>
            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/btnGuardar"
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/btnBuscar"
                android:layout_margin="4dp"/>
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/btnListar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/btnListar"
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/btnBorrar"
                android:layout_margin="4dp"/>
        </TableRow>
    </TableLayout>

    <!-- Lista -->
    <ListView
        android:id="@+id/lvLista"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"/>


</LinearLayout>